# resuma

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/: REPO_DISCOVERY.md
.github/workflows/: ci.yml
apps/docs-site/: Cargo.toml
apps/docs-site/src/: main.rs
apps/docs-site/src/pages/: _registry.rs  index.rs  layout.rs  mod.rs
apps/docs-site/src/pages/docs/: api.rs  architecture.rs  benchmark.rs  cli.rs  examples.rs  faq.rs  getting_started.rs  index.rs  layout.rs  package.rs  project_structure.rs  search.rs
apps/docs-site/src/pages/docs/components/: context.rs  effects.rs  form.rs  handlers.rs  index.rs  islands.rs  js.rs  nav_link.rs  server.rs  signals.rs  slots.rs  store.rs  tasks.rs  view.rs
apps/docs-site/src/pages/docs/cookbook/: debouncer.rs  docker.rs  index.rs  loader_invalidation.rs  portals.rs  prg.rs  streaming_loaders.rs  theme.rs  view_transitions.rs
apps/docs-site/src/pages/docs/flow/: caching.rs  endpoints.rs  errors.rs  index.rs  layouts.rs  loaders.rs  middleware.rs  pages.rs  prefetch.rs  routing.rs  streaming.rs  submits.rs
apps/docs-site/src/pages/docs/integrations/: auth.rs  e2e.rs  i18n.rs  index.rs  og_image.rs  sqlx.rs  supabase.rs  tailwind.rs  turso.rs  validator.rs
apps/docs-site/src/pages/docs/security/: authorization.rs  backend_patterns.rs  configure.rs  index.rs  middleware.rs  server_actions.rs  todo.rs
apps/docs-site/src/site/: css.rs  docs_search.rs  mod.rs  pwa.rs  seo.rs  sidebar.rs
benchmark/: README.md
crates/resuma/: Cargo.toml
crates/resuma-macros/: Cargo.toml
crates/resuma-macros/src/: component_macro.rs  data_macro.rs  island_macro.rs  lib.rs  server_macro.rs  submit_macro.rs  view_macro.rs
crates/resuma/assets/: core.js  runtime.js  runtime.js.map
crates/resuma/src/: lib.rs
crates/resuma/src/cli/: scaffold.rs
crates/resuma/src/core/: context.rs  effect.rs  error.rs  error_boundary.rs  mod.rs  nav.rs  show.rs  signal.rs
crates/resuma/src/flow/: app.rs  errors.rs  extensions.rs  load.rs  mod.rs  pwa.rs  redirect.rs  registry.rs  routes.rs  submit.rs
crates/resuma/src/server/: app.rs  handler_assets.rs  mod.rs  security.rs
crates/resuma/src/ssr/: mod.rs
crates/resuma/templates/todo/: security.rs
crates/resuma/tests/: integration.rs  lazy_chunks.rs  ops_flow.rs  static_assets.rs
docs/: ARCHITECTURE.md  BLOG_RUST_SSR_WITHOUT_HYDRATION.md  FLOW.md  GETTING_STARTED.md  PACKAGE.md  PUBLISHING.md  README.md
e2e/: run.mjs
examples/counter/src/: main.rs
examples/e2e/: Cargo.toml
examples/e2e/src/: main.rs
examples/todo/src/: security.rs
examples/website/src/pages/: index.rs
examples/website/src/pages/docs/: architecture.rs  faq.rs  getting_started.rs  index.rs  package.rs
examples/website/src/site/: css.rs  sidebar.rs
runtime/: package-lock.json  package.json
runtime/src/: core.ts  effects.ts  navigation.ts  runtime.ts  signals.ts
