[workspace]
resolver = "2"
members = [
    "crates/resuma-macros",
    "crates/resuma",
    "examples/counter",
    "examples/todo",
    "examples/flow-demo",
    "examples/flow-pages",
    "examples/e2e",
]

[workspace.package]
version = "0.4.6"
edition = "2021"
rust-version = "1.91"
authors = ["Resuma Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GolfredoPerezFernandez/resuma"
homepage = "https://resuma-docs.fly.dev"
documentation = "https://resuma-docs.fly.dev/docs"
description = "Resuma: resumable SSR Rust web framework (not a CV app). Zero hydration, ~907 B loader, Axum, server actions, Flow."
keywords = ["web", "framework", "ssr", "resumability", "axum"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"

[workspace.dependencies]
resuma-macros = { path = "crates/resuma-macros", version = "0.4.6" }

# 3rd-party
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7", features = ["ws"] }
tower       = { version = "0.5", features = ["util"] }
tower-http  = { version = "0.6", features = ["fs", "trace"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
syn         = { version = "2", features = ["full", "extra-traits"] }
quote       = "1"
proc-macro2 = "1"
anyhow      = "1"
thiserror   = "1"
once_cell   = "1"
parking_lot = "0.12"
notify      = "6"
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
getrandom     = { version = "0.2", features = ["std"] }
async-trait   = "0.1"
ctor          = "0.2"
tokio-tungstenite = "0.24"
futures-util  = { version = "0.3", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
