[package]
name = "resuma-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Proc-macros for the Resuma Rust SSR framework: view!, #[component], #[server], rs2js."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn          = { workspace = true }
quote        = { workspace = true }
proc-macro2  = { workspace = true }
thiserror    = { workspace = true }
